Added progress animation

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:orientation="vertical">
 
     <pt.tornelas.segmentedprogressbar.SegmentedProgressBar
         android:id="@+id/segmentedProgressBar"
         android:layout_width="match_parent"
-        android:layout_height="10dp"
+        android:layout_height="5dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:segmentProgress="2"
-        app:segmentStrokeWidth="1dp"/>
+        app:segmentCornerRadius="3dp"
+        app:timePerSegment="1000"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/btnStartAnimation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Start!"/>
+
+    <Button
+        android:id="@+id/btnPauseAnimation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pause"/>
+
+    <Button
+        android:id="@+id/btnResetAnimation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Reset"/>
+
+    <Button
+        android:id="@+id/btnNext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Next"/>
+
+    <Button
+        android:id="@+id/btnPrevious"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Previous"/>
+
+    <Button
+        android:id="@+id/btnRestartSegment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Restart segment"/>
+
+    <Button
+        android:id="@+id/btnIncrease"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Increaset"/>
+
+</androidx.appcompat.widget.LinearLayoutCompat>
