--- a/segmentedprogressbar/src/main/res/values/dimens.xml
+++ b/segmentedprogressbar/src/main/res/values/dimens.xml
@@ -1,6 +1,5 @@
 <resources>
     <dimen name="default_segment_margin">8dp</dimen>
-    <dimen name="default_corner_radius">5dp</dimen>
-    <dimen name="segmentStrokeWidth">0dp</dimen>
-
+    <dimen name="default_corner_radius">0dp</dimen>
+    <dimen name="default_segment_stroke_width">0dp</dimen>
 </resources>
