--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
             android:id="@+id/btnStandardLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Standard" />
+            android:text="Standard"
+            tools:ignore="HardcodedText" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
